# dfmta

./: DESCRIPTION  MD5  NAMESPACE  configure  configure.ac
R/: dfmta.R
man/: dfmta-package.Rd  mtaBin_next.Rd  mtaBin_sim.Rd  mta_next.Rd  mta_sim.Rd
src/: Makevars  Makevars.in  Makevars.win  dfmta.cpp
src/CppBugs/cppbugs/: mcmc.math.hpp  mcmc.model.hpp  mcmc.rng.hpp
src/CppBugs/cppbugs/distributions/: mcmc.bernoulli.hpp  mcmc.discrete.hpp  mcmc.exponential.censored.hpp  mcmc.exponential.hpp  mcmc.multivariate.normal.hpp
